--- a/res/layout-land/activity_quiz.xml
+++ b/res/layout-land/activity_quiz.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_linear_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
@@ -83,4 +83,12 @@
               android:text="@string/previous_button" />
 
   </LinearLayout>
-</FrameLayout>
+  <!-- Adding Build Version | Challenge -->
+  <TextView
+    android:id="@+id/build_version_text_view"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom|center"
+    android:padding="12dp" />
+
+</merge>
